# masatools

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: base_prompt.md  mcp-config.json
docs/: sdk_spec.md  sdk_test_spec.md  test_spec.md
masatools/: __init__.py
masatools/adapters/mcp/: server.py
masatools/core/: __init__.py  context.py  models.py  nats_client.py  s3_client.py
masatools/skills/common/: __init__.py  board.py  storage.py
masatools/skills/specialized/: __init__.py  analysis.py  simulation.py
tests/integration/: test_masabbs_it.py
tests/sdk/: test_mcp.py  test_models.py  test_skills.py
