[project]
name = "masatools"
version = "1.0.2"
description = "SDK for Multi-Agent Message Board System (masabbs)"
authors = [{ name = "TatsuyaKatayama" }]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0.0",
    "nats-py[nkeys]>=2.7.0",
    "boto3>=1.34.0",
    "python-ulid>=2.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "mcp>=1.0.0",
    "httpx>=0.28.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["masatools"]
